2017-01-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/radiusutils.c, util/radiusutils.h: New. Moved here from
	openvas-libraries.

	* util/CMakeLists.txt: Handle new module "radiusutils".

	* INSTALL: Add libfreeradius-client as optional requirement.

2017-01-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/libgvm_util.pc.in: Add missing dependency "gcrypt".
	Also added the note that it should not be necessary.
	However, I checked forth and back and found no way in cmake
	to get the upcoming change to openvas-cli to build without
	this change.

2017-01-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Legacy log functions are no longer required.

	* base/logging.h (setup_legacy_log_handler) Function declaration
	removed.

	* base/logging.c (setup_legacy_log_handler): Function removed.
	(legacy_log_handler): Function removed.
	(log_legacy_write, log_legacy_fflush): Do not check if
	legacy_log_handler is set.

2017-01-27  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/libgvm_util.pc.in (Libs): Leave note that having '-luuid' in
	the public linker flags should not be necessary.

2017-01-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/libgvm_util.pc.in: Add missing dependency "uuid".

2017-01-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* gmp/, gmp/gmp.c, gmp/gmp.h, gmp/CMakeLists.txt, gmp/libgvm_gmp.pc.in:
	New.  Moved here from openvas-libraries (omp).

	* CMakeLists.txt: Consider new library "gmp".

2017-01-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/logging.c (log_func_for_gnutls): Remove superfluous Doxygen
	'ref' command without existing target.

2017-01-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/logging.c, base/logging.h: New. Moved here from
	openvas-libraries.

	* base/CMakeLists.txt: Handle new module "logging".

2017-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/uuidutils.c, util/uuidutils.h: New. Moved here from