@@ -1,3 +1,12 @@
+2017-02-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* util/sshutils.c, util/sshutils.h: New. Moved here from
+	openvas-libraries.
+
+	* util/CMakeLists.txt: Handle new module "sshutils".
+
+	* INSTALL: Add libssh as requirement.
+
 2017-01-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* util/radiusutils.c, util/radiusutils.h: New. Moved here from
